# Dynamo-Grasp

./: .gitignore  INSTALL.md  LICENSE.txt  README.md  data_collection.py  dynamo_grasp.sh  environment.yaml  pyproject.toml  setup.py
docs/source/: dataset.md  index.md  training.md  usage.md
isaacgymenvs/tasks/: ur16e_manipulator.py
isaacgymenvs/tasks/CommonUtils/: calculate_error.py  evaluate_success.py  get_sensor_values.py  init_variables_configs.py  reset_env.py  sample_grasp.py  saving_data.py  setup_env.py
scenario_grasp_configurations/test_grasp_data/0/: rgb_0_1.npy
scenario_grasp_configurations/test_grasp_data/1/: rgb_1_1.npy
scenario_grasp_configurations/test_grasp_data/2/: rgb_2_1.npy
suction_cup_modelling/: suction_score_calcualtor.py
training/src/: train_grasp_model.py
training/src/pre_processing_data_scripts/: process_raw_files.py
