[tool.poetry]
name = "dynamo-grasp"
version = "0.1.0"
description = "DYNAMO-GRASP - A physics based suction pick point detection method using Isaac GYM simulaton"
authors = [
    "Soofiyan Atar <soofiyan2910@gmail.com>",
    "Boling Yang <bolingy@uw.edu>",
    "Markus Grotz <grotz@uw.edu>",
]
maintainers = [
    "Soofiyan Atar <soofiyan2910@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/bolingy/Dynamo-Grasp"
documentation = "https://sites.google.com/view/dynamo-grasp"
keywords = ["robotics", "humanoid robots", "toolbox"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Robot Framework ",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
tensorflow = "2.12.0"
open3d = "^0.17.0"
openai = "^0.28.1"
pillow = "^10.0.1"
wandb = "^0.15.12"
numpy = ">=1.23"
imageio = "^2.31.5"
autolab-perception = "^1.0.0"
matplotlib = "^3.7.3"
opencv-python = "^4.8.1.78"
einops = "0.6.1"
linformer = "^0.2.1"
click-prompt = "^0.5.1"
hydra-core = "^1.3.2"
rl-games = "1.5.2"
visualization = "^1.0.0"
gputil = "^1.4.0"
pandas = "2.0.1"
requests = "2.31.0"
ninja = "^1.11.1.1"


[tool.poetry.group.dev.dependencies]
sphinx-rtd-theme = "^1.3.0"
sphinx = "^6.0"
licensecheck = "^2023.5.1"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
